--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "1001-app",
   "version": "0.1.0",
-  "homepage": "https://myusername.github.io/my-app",
+  "homepage": " https://daisyzhang31.github.io/SoE-1001-Stories/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
